// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cascader > options 1`] = `<div />`;

exports[`Cascader > options with format 1`] = `<div />`;

exports[`Cascader > options with valueKey/textKey/childrenKey 1`] = `<div />`;

exports[`Cascader > value 1`] = `<div />`;

exports[`Cascader > visible true 1`] = `
<div>
  <div
    class="nut-overlay"
    style="--nutui-overlay-zIndex: 1000;"
  />
  <div
    class="nut-popup nut-popup-round nut-popup-bottom"
    style="z-index: 1000;"
  >
    <div
      class="nut-cascader "
    >
      <div
        class="nut-tabs nut-tabs-horizontal"
      >
        <div
          class="nut-tabs-titles nut-tabs-titles-line"
        >
          <div
            class="nut-tabs-titles-item "
          >
            <span
              class="nut-tabs-titles-item-text"
            >
              福建
            </span>
            <span
              class="nut-tabs-titles-item-line"
            />
          </div>
          <div
            class="nut-tabs-titles-item "
          >
            <span
              class="nut-tabs-titles-item-text"
            >
              福州
            </span>
            <span
              class="nut-tabs-titles-item-line"
            />
          </div>
          <div
            class="nut-tabs-titles-item nut-tabs-titles-item-active"
          >
            <span
              class="nut-tabs-titles-item-text"
            >
              鼓楼区
            </span>
            <span
              class="nut-tabs-titles-item-line"
            />
          </div>
        </div>
        <div
          class="nut-tabs-content-wrap"
        >
          <div
            class="nut-tabs-content"
            style="transform: translate3d(-200%, 0, 0); transition-duration: 300ms;"
          >
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    浙江
                  </div>
                </div>
                <div
                  class="disabled nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    湖南
                  </div>
                </div>
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    福建
                  </div>
                  <svg
                    aria-labelledby="Checklist"
                    class="nut-icon nut-icon-Checklist nut-cascader-icon-check"
                    role="presentation"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M159.29 500.62c62.58 0 125.16 17.07 221.87 102.4 8.53 5.69 19.91 5.69 25.6 0 48.35-54.04 238.93-261.69 455.11-329.95 0 0 28.45-5.69 42.66 19.91 8.53 17.07 19.91 34.13-5.69 54.04-22.75 17.07-264.53 179.2-440.88 440.89l-2.85 2.85c-11.38 8.53-68.27 51.2-119.47-14.23-56.89-71.11-85.33-139.38-196.26-196.26-2.85 0-2.85-2.85-5.69-5.69-11.38-11.38-54.04-73.95 25.6-73.96"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    福州
                  </div>
                  <svg
                    aria-labelledby="Checklist"
                    class="nut-icon nut-icon-Checklist nut-cascader-icon-check"
                    role="presentation"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M159.29 500.62c62.58 0 125.16 17.07 221.87 102.4 8.53 5.69 19.91 5.69 25.6 0 48.35-54.04 238.93-261.69 455.11-329.95 0 0 28.45-5.69 42.66 19.91 8.53 17.07 19.91 34.13-5.69 54.04-22.75 17.07-264.53 179.2-440.88 440.89l-2.85 2.85c-11.38 8.53-68.27 51.2-119.47-14.23-56.89-71.11-85.33-139.38-196.26-196.26-2.85 0-2.85-2.85-5.69-5.69-11.38-11.38-54.04-73.95 25.6-73.96"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane active"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    鼓楼区
                  </div>
                  <svg
                    aria-labelledby="Checklist"
                    class="nut-icon nut-icon-Checklist nut-cascader-icon-check"
                    role="presentation"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M159.29 500.62c62.58 0 125.16 17.07 221.87 102.4 8.53 5.69 19.91 5.69 25.6 0 48.35-54.04 238.93-261.69 455.11-329.95 0 0 28.45-5.69 42.66 19.91 8.53 17.07 19.91 34.13-5.69 54.04-22.75 17.07-264.53 179.2-440.88 440.89l-2.85 2.85c-11.38 8.53-68.27 51.2-119.47-14.23-56.89-71.11-85.33-139.38-196.26-196.26-2.85 0-2.85-2.85-5.69-5.69-11.38-11.38-54.04-73.95 25.6-73.96"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    台江区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader > visible true 2`] = `
<div
  class="active nut-cascader-item"
>
  <div
    class="nut-cascader-item-title"
  >
    鼓楼区
  </div>
  <svg
    aria-labelledby="Checklist"
    class="nut-icon nut-icon-Checklist nut-cascader-icon-check"
    role="presentation"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M159.29 500.62c62.58 0 125.16 17.07 221.87 102.4 8.53 5.69 19.91 5.69 25.6 0 48.35-54.04 238.93-261.69 455.11-329.95 0 0 28.45-5.69 42.66 19.91 8.53 17.07 19.91 34.13-5.69 54.04-22.75 17.07-264.53 179.2-440.88 440.89l-2.85 2.85c-11.38 8.53-68.27 51.2-119.47-14.23-56.89-71.11-85.33-139.38-196.26-196.26-2.85 0-2.85-2.85-5.69-5.69-11.38-11.38-54.04-73.95 25.6-73.96"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
</div>
`;
